packages/recomponents/src/components/r-button/r-button.scss
.r-button {
    display: inline-block;
    height: auto;
    box-sizing: border-box;
    text-transform: capitalize;
    text-decoration: none;
    text-align: center;
    vertical-align: baseline;
    user-select: none;
    appearance: none;
    font-family: var(--button-font-family);
    font-weight: var(--button-font-weight);
    font-size: var(--button-font-size);
    line-height: var(--button-font-line-height);
    border-radius: var(--button-border-radius);
    border: none;
    cursor: pointer;
    outline: none;
    transition: var(--button-transition);

    &:hover {
        text-decoration: none;
    }

    &--size-small {
        padding: var(--button-size-s);
    }

    &--size-regular {
        padding: var(--button-size-m);
    }

    &--size-large {
        padding: var(--button-size-l);
    }

    &--type-default {
        background: var(--button-default-background);
        color: var(--button-default-color);
        box-shadow: var(--button-default-box-shadow);
        border: var(--button-default-border);

        &:hover {
            background: var(--button-default-hover-background);
            color: var(--button-default-hover-color);
            box-shadow: var(--button-default-hover-box-shadow);
            border: var(--button-default-hover-border);
        }

        &:focus {
            background: var(--button-default-focus-background);
            color: var(--button-default-focus-color);
            box-shadow: var(--button-default-focus-box-shadow);
            border: var(--button-default-focus-border);
        }

        &:active {
            background: var(--button-default-active-background);
            color: var(--button-default-active-color);
            box-shadow: var(--button-default-active-box-shadow);
            border: var(--button-default-active-border);
        }

        &[disabled] {
            opacity: var(--button-default-disabled-opacity);
            cursor: var(--button-default--disabled-cursor);
            pointer-events: none;
            background: var(--button-default-disabled-background);
            color: var(--button-default-disabled-color);
            box-shadow: var(--button-default-disabled-box-shadow);
            border: var(--button-default-disabled-border);
        }
    }

    &--type-primary {
        background: var(--button-primary-background);
        color: var(--button-primary-color);
        box-shadow: var(--button-primary-box-shadow);
        border: var(--button-primary-border);

        &:hover {
            background: var(--button-primary-hover-background);
            color: var(--button-primary-hover-color);
            box-shadow: var(--button-primary-hover-box-shadow);
            border: var(--button-primary-hover-border);
        }

        &:focus {
            background: var(--button-primary-focus-background);
            color: var(--button-primary-focus-color);
            box-shadow: var(--button-primary-focus-box-shadow);
            border: var(--button-primary-focus-border);
        }

        &:active {
            background: var(--button-primary-active-background);
            color: var(--button-primary-active-color);
            box-shadow: var(--button-primary-active-box-shadow);
            border: var(--button-primary-active-border);
        }

        &[disabled] {
            opacity: var(--button-primary-disabled-opacity);
            cursor: var(--button-primary--disabled-cursor);
            pointer-events: none;
            background: var(--button-primary-disabled-background);
            color: var(--button-primary-disabled-color);
            box-shadow: var(--button-primary-disabled-box-shadow);
            border: var(--button-primary-disabled-border);
        }
    }

    &--type-danger {
        background: var(--button-danger-background);
        color: var(--button-danger-color);
        box-shadow: var(--button-danger-box-shadow);
        border: var(--button-danger-border);

        &:hover {
            background: var(--button-danger-hover-background);
            color: var(--button-danger-hover-color);
            box-shadow: var(--button-danger-hover-box-shadow);
            border: var(--button-danger-hover-border);
        }

        &:focus {
            background: var(--button-danger-focus-background);
            color: var(--button-danger-focus-color);
            box-shadow: var(--button-danger-focus-box-shadow);
            border: var(--button-danger-focus-border);
        }

        &:active {
            background: var(--button-danger-active-background);
            color: var(--button-danger-active-color);
            box-shadow: var(--button-danger-active-box-shadow);
            border: var(--button-danger-active-border);
        }

        &[disabled] {
            opacity: var(--button-danger-disabled-opacity);
            cursor: var(--button-danger--disabled-cursor);
            pointer-events: none;
            background: var(--button-danger-disabled-background);
            color: var(--button-danger-disabled-color);
            box-shadow: var(--button-danger-disabled-box-shadow);
            border: var(--button-danger-disabled-border);
        }
    }

    &--type-link {
        color: #0044D4;
        vertical-align: baseline;
        padding: 0;
        background: none;
        box-shadow: none;

        &:hover {
            background: none;
            text-decoration: underline;
            box-shadow: none;
        }

        &:focus {
            box-shadow: 0 0 0 2px rgba(0, 68, 212, 0.5);
        }

        &:active {
            background: none;
            box-shadow: 0 1px 3px 1px var(--red-color-dark) inset;
        }
    }

    &--fluid {
        width: 100%;
    }
}

/**
* Groups
*/
.r-button-group {
    display: flex;
}

@media screen and (max-width: 767px) {
    .r-button-group > .r-button {
        flex: 1 0;
    }
}

.r-button-group .r-button {
    margin-left: -1px;
    margin-left: -0.1rem;
}

.r-button-group .r-button:not(:first-child):not(:last-child),
.r-button-group .popper:not(:first-child):not(:last-child) .r-button {
    border-radius: 0;
}

.r-button-group .r-button:first-child,
.r-button-group .popper:first-child .r-button {
    border-radius: 4px 0 0 4px;
}

.r-button-group .r-button:last-child,
.r-button-group .popper:last-child .r-button {
    border-radius: 0 4px 4px 0;
}

.r-button-group.r-button-group-fluid > .r-button {
    flex: 1 0;
}

.r-button-group .r-button.is-active {
    background: #0044D4;
    background: linear-gradient(to bottom, #0044D4 0%, #2600d4 100%);
    color: #FFFFFF;
    box-shadow: 0 1px 2px 0 rgba(161, 178, 193, 0.8);
}

/**
* Icons
*/
.r-button {
    &--size-small.has-icon {
        padding: var(--button-icon-size-s);
    }

    &--size-regular.has-icon {
        padding: var(--button-icon-size-m);
    }

    &--size-large.has-icon {
        padding: var(--button-icon-size-l);
    }

    &.has-icon-left .r-icon {
        margin-right: var(--button-icon-left-margin);
    }

    &.has-icon-right .r-icon {
        margin-left: var(--button-icon-right-margin);
    }

    &.has-icon.r-button-fitted {
        padding: 0;
    }

    &--type-default .r-icon {
        fill: var(--button-icon-default-color);
    }

    &--type-primary .r-icon {
        fill: var(--button-icon-primary-color);
    }

    &--type-danger .r-icon {
        fill: var(--button-icon-danger-color);
    }
}

